# gemini-seo

./: .gitignore  AGENTS.md  CHANGELOG.md  CITATION.cff  CLAUDE.md  CODEOWNERS  CODEX.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GEMINI.md  LEGAL-NOTICE.md  LICENSE  PRIVACY.md  README.md  SECURITY.md  SKILL.md  SUPPORT.md  TODO.md  codex-seo.skill  install.ps1  install.sh  pyproject.toml  requirements.txt  uninstall.ps1  uninstall.sh
.claude-plugin/: marketplace.json  plugin.json
.devcontainer/: devcontainer.json
.github/: PULL_REQUEST_TEMPLATE.md
agents/: seo-backlinks.md  seo-dataforseo.md  seo-ecommerce.md  seo-google.md  seo-image-gen.md  seo-plan.md  seo-programmatic.md  seo-sitemap.md
assets/: report-template.html
docs/: ARCHITECTURE.md  COMMANDS.md  INSTALLATION.md  MCP-INTEGRATION.md  RELEASE-NOTES-v1.4.0.md  TROUBLESHOOTING.md
hooks/: pre-commit-seo-check.sh  validate-schema.py
pdf/: google-seo-reference.md
references/: seo-audit.md  seo-competitor-pages.md  seo-content.md  seo-geo.md  seo-hreflang.md  seo-images.md  seo-page.md  seo-performance.md  seo-plan.md  seo-programmatic.md  seo-schema.md  seo-sitemap.md  seo-technical.md  seo-visual.md
scripts/: analyze_visual.py  backlinks_auth.py  bing_webmaster.py  capture_screenshot.py  commoncrawl_graph.py  dataforseo_costs.py  dataforseo_normalize.py  drift_baseline.py  drift_report.py  fetch_page.py  generate_cover_image.py  google_auth.py  google_report.py  keyword_planner.py  moz_api.py  nlp_analyze.py  release_report.py  validate_backlink_report.py  verify_backlinks.py
seo/: SKILL.md
(+70 files in other folders)
